<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <!--
    /**
     * Licensed to the Apache Software Foundation (ASF) under one
     * or more contributor license agreements.  See the NOTICE file
     * distributed with this work for additional information
     * regarding copyright ownership.  The ASF licenses this file
     * to you under the Apache License, Version 2.0 (the
     * "License"); you may not use this file except in compliance
     * with the License.  You may obtain a copy of the License at
     *
     *     http://www.apache.org/licenses/LICENSE-2.0
     *
     * Unless required by applicable law or agreed to in writing, software
     * distributed under the License is distributed on an "AS IS" BASIS,
     * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     * See the License for the specific language governing permissions and
     * limitations under the License.
     */
    -->
    <modelVersion>4.0.0</modelVersion>
    <!--parent>
        <artifactId>hbase</artifactId>
        <groupId>org.apache.hbase</groupId>
        <version>0.98.6-hadoop2</version>
        <relativePath>..</relativePath>
    </parent-->

	<groupId>org.apache.hbase</groupId>
    <artifactId>hbase-secondaryindex</artifactId>
    <name>HBase - Secondary Index</name>
	<version>0.98.6-hadoop2</version>
    <description>Secondary index related funcationality for HBase</description>

    <properties>
        <hbase.version>0.98.6-hadoop2</hbase.version>
        <compat.module>hbase-hadoop2-compat</compat.module>
        <hadoop-two.version>2.5.0</hadoop-two.version>
    </properties>

    <build>
        <plugins>
			<plugin>
			  <artifactId>maven-compiler-plugin</artifactId>
			  <version>2.5.1</version>
			  <configuration>
				<source>1.7</source>
				<target>1.7</target>
				<showWarnings>true</showWarnings>
				<showDeprecation>false</showDeprecation>
				<compilerArgument>-Xlint:-options</compilerArgument>
			  </configuration>
			</plugin>
		
        </plugins>
    </build>

    <dependencies>
      <!-- Intra-project dependencies -->
      <dependency>
        <groupId>org.apache.hbase</groupId>
        <artifactId>hbase-common</artifactId>
          <version>${hbase.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.hbase</groupId>
        <artifactId>hbase-client</artifactId>
          <version>${hbase.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.hbase</groupId>
        <artifactId>hbase-server</artifactId>
          <version>${hbase.version}</version>
      </dependency>
      <dependency>
      	<groupId>org.apache.hbase</groupId>
      	<artifactId>hbase-common</artifactId>
          <version>${hbase.version}</version>
      	<type>test-jar</type>
      </dependency>
      <dependency>
      	<groupId>org.apache.hbase</groupId>
      	<artifactId>hbase-server</artifactId>
          <version>${hbase.version}</version>
      	<type>test-jar</type>
      </dependency>
      <dependency>
      	<groupId>org.apache.hbase</groupId>
      	<artifactId>hbase-hadoop-compat</artifactId>
          <version>${hbase.version}</version>
      </dependency>
      <dependency>
      	<groupId>org.apache.hbase</groupId>
      	<artifactId>hbase-hadoop-compat</artifactId>
          <version>${hbase.version}</version>
      	<type>test-jar</type>
      	<scope>test</scope>
      </dependency>
      <dependency>
      	<groupId>org.apache.hbase</groupId>
      	<artifactId>${compat.module}</artifactId>
      	<version>${project.version}</version>
      </dependency>
      <dependency>
      	<groupId>org.apache.hbase</groupId>
      	<artifactId>${compat.module}</artifactId>
      	<version>${project.version}</version>
      	<type>test-jar</type>
      	<scope>test</scope>
      </dependency>
      <!-- General dependencies -->
	  <dependency>
		<groupId>commons-lang</groupId>
		<artifactId>commons-lang</artifactId>
		<version>2.6</version>
	  </dependency>
      <dependency>
		<groupId>commons-logging</groupId>
		<artifactId>commons-logging</artifactId>
		<version>1.1.1</version>
	  </dependency>

        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-common</artifactId>
            <version>${hadoop-two.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-common</artifactId>
            <version>${hadoop-two.version}</version>
            <type>test-jar</type>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-auth</artifactId>
            <version>${hadoop-two.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-client</artifactId>
            <version>${hadoop-two.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-mapreduce-client-core</artifactId>
            <version>${hadoop-two.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-mapreduce-client-jobclient</artifactId>
            <version>${hadoop-two.version}</version>
            <type>test-jar</type>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-hdfs</artifactId>
            <version>${hadoop-two.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-hdfs</artifactId>
            <version>${hadoop-two.version}</version>
            <type>test-jar</type>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-annotations</artifactId>
            <version>${hadoop-two.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-minicluster</artifactId>
            <version>${hadoop-two.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.9.0</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <profiles>
        <!-- Skip the tests in this module -->
        <profile>
            <id>skipSecondaryIndexTests</id>
            <activation>
                <property>
                    <name>skipSecondaryIndexTests</name>
                </property>
            </activation>
            <properties>
                <surefire.skipFirstPart>true</surefire.skipFirstPart>
				<surefire.skipSecondPart>true</surefire.skipSecondPart>
            </properties>
        </profile>
        <!-- profile against Hadoop 1.0.x: This is the default. It has to have the same
     activation property as the parent Hadoop 1.0.x profile to make sure it gets run at
     the same time. -->


  <!--
      profile for building against Hadoop 2.0.0-alpha. Activate using:
       mvn -Dhadoop.profile=2.0
    -->
    <profile>
      <id>os.windows</id>
      <activation>
        <os>
          <family>Windows</family>
        </os>
      </activation>
      <properties>
        <build.platform>cygwin</build.platform>
      </properties>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <configuration>
                <argLine>-enableassertions -Xmx1900m -XX:MaxPermSize=256m -Djava.security.egd=file:/dev/./urandom -Djava.net.preferIPv4Stack=true "-Djava.library.path=${hadoop.library.path};${java.library.path}"</argLine>
                <systemProperties>
                  <property>
                    <name>java.net.preferIPv4Stack</name>
                    <value>true</value>
                  </property>
                </systemProperties>
              </configuration>
            </plugin>
          </plugins>
        </pluginManagement>
      </build>
    </profile>


	<!-- profile for building against Hadoop 3.0.x. Activate using: mvn -Dhadoop.profile=3.0 -->
    </profiles>

</project>
